Add package info

--- a/deno.json
+++ b/deno.json
@@ -1,1 +1,8 @@
-{ "imports": { "@cross/runtime": "jsr:@cross/runtime@^0.0.16" } }
+{
+  "name": "@cross/fs",
+  "version": "0.0.1",
+  "exports": "./mod.ts",
+  "imports": {
+    "@cross/runtime": "jsr:@cross/runtime@^0.0.16"
+  }
+}
