--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,5 @@
 {
   "name": "@cross/fs",
-  "version": "0.0.1",
-  "exports": "./mod.ts",
-  "imports": {
-    "@cross/runtime": "jsr:@cross/runtime@^0.0.16"
-  }
+  "version": "0.0.2",
+  "exports": "./demo.ts"
 }
