--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,8 @@
 {
   "name": "@cross/fs",
-  "version": "0.0.2",
-  "exports": "./demo.ts"
+  "version": "0.0.1",
+  "exports": "./mod.ts",
+  "imports": {
+    "@cross/runtime": "jsr:@cross/runtime@^0.0.16"
+  }
 }
