--- a/deno.json
+++ b/deno.json
@@ -2,5 +2,17 @@
   "name": "@cross/fs",
   "version": "0.0.3",
   "exports": "./mod.ts",
-  "imports": { "@cross/runtime": "jsr:@cross/runtime@^1.0.0" }
+  "imports": {
+    "@cross/runtime": "jsr:@cross/runtime@^1.0.0",
+    "@cross/test": "jsr:@cross/test@^0.0.9",
+    "@std/assert": "jsr:@std/assert@^0.220.1"
+  },
+  "publish": {
+    "exclude": [".github", "*.test.ts"]
+  },
+  "tasks": {
+    "check": "deno fmt --check && deno lint && deno check mod.ts && deno task check-deps",
+    "test": "deno test -A",
+    "check-deps": "deno run -rA jsr:@check/deps"
+  }
 }
