--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@cross/fs",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "exports": {
     ".": "./mod.ts",
     "./stat": "./src/stat/mod.ts",
@@ -8,9 +8,12 @@
     "./ops": "./src/ops/mod.ts"
   },
   "imports": {
+    "@cross/dir": "jsr:@cross/dir@^1.1.0",
     "@cross/runtime": "jsr:@cross/runtime@^1.0.0",
     "@cross/test": "jsr:@cross/test@^0.0.9",
-    "@std/assert": "jsr:@std/assert@^0.220.1"
+    "@std/assert": "jsr:@std/assert@^0.220.1",
+    "@std/path": "jsr:@std/path@^0.220.1",
+    "@std/uuid": "jsr:@std/uuid@^0.220.1"
   },
   "publish": {
     "exclude": [".github", "*.test.ts"]
