--- a/deno.json
+++ b/deno.json
@@ -13,7 +13,7 @@
     "@cross/test": "jsr:@cross/test@^0.0.9",
     "@std/assert": "jsr:@std/assert@^0.220.1",
     "@std/path": "jsr:@std/path@^0.220.1",
-    "@std/uuid": "jsr:@std/uuid@^0.220.1"
+    "@std/ulid": "jsr:@std/ulid@^0.220.1"
   },
   "publish": {
     "exclude": [".github", "*.test.ts"]
