--- a/deno.json
+++ b/deno.json
@@ -11,6 +11,7 @@
     "@cross/dir": "jsr:@cross/dir@^1.1.0",
     "@cross/runtime": "jsr:@cross/runtime@^1.0.0",
     "@cross/test": "jsr:@cross/test@^0.0.9",
+    "@cross/utils": "jsr:@cross/utils@^0.8.2",
     "@std/assert": "jsr:@std/assert@^0.221.0",
     "@std/path": "jsr:@std/path@^0.221.0"
   },
